add new migrations and config docker compose

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.12.11",
     "eslint-plugin-simple-import-sort": "12.1.0",
+    "prisma": "5.13.0",
     "tsup": "8.0.2",
     "tsx": "4.9.3",
     "typescript": "5.4.5"
   },
   "dependencies": {
+    "@prisma/client": "5.13.0",
     "dotenv": "16.4.5",
     "fastify": "4.27.0",
     "zod": "3.23.8"
