--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "extends":["@rocketseat/eslint-config/node"],
     "plugins": ["simple-import-sort"],
     "rules": {
-      "simple-import-sort/imports": "error"
+      "simple-import-sort/imports": "error",
+      "camelcase": "off"
     }
 }
