--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "plugins": ["simple-import-sort"],
     "rules": {
       "simple-import-sort/imports": "error",
-      "camelcase": "off"
+      "camelcase": "off",
+      "no-useless-constructor": "off"
     }
 }
