--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch":"vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.12.11",
+    "@vitest/coverage-v8": "1.6.0",
     "eslint-plugin-simple-import-sort": "12.1.0",
     "prisma": "5.13.0",
     "tsup": "8.0.2",
