--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "5.13.0",
     "@types/bcryptjs": "2.4.6",
     "bcryptjs": "2.4.3",
+    "dayjs": "1.11.11",
     "dotenv": "16.4.5",
     "fastify": "4.27.0",
     "zod": "3.23.8"
