--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-NODE_END=dev
+NODE_ENV=dev
+
+#Auth
+JWT_SECRET=node-secret
+
+#database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apigym?schema=public"
+
