--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-enviroment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-enviroment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretext:e2e": "run-s test:create-prisma-enviroment test:install-prisma-enviroment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -17,9 +23,12 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.12.11",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.6.0",
     "eslint-plugin-simple-import-sort": "12.1.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.13.0",
+    "supertest": "7.0.0",
     "tsup": "8.0.2",
     "tsx": "4.9.3",
     "typescript": "5.4.5",
