--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
-    "pretext:e2e": "run-s test:create-prisma-enviroment test:install-prisma-enviroment",
+    "pretest:e2e": "run-s test:create-prisma-enviroment test:install-prisma-enviroment",
     "test:e2e": "vitest run --dir src/http",
     "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
@@ -36,6 +36,7 @@
     "vitest": "1.6.0"
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
     "@fastify/jwt": "8.0.1",
     "@prisma/client": "5.13.0",
     "@types/bcryptjs": "2.4.6",
